# cellworld_experiment_service

./: CMakeLists.txt
catchtests/: client_test.cpp
include/experiment/: experiment_client.h  experiment_messages.h  experiment_service.h
python/: __info__.py  client_test.py  service_test.py  terminal.py
python/setup/: setup.cfg  setup.py
python/src/: __init__.py  experiment_client.py  experiment_messages.py  experiment_service.py
src/: experiment_client.cpp  experiment_service.cpp
src/tools/: server.cpp
